List of changes made

11/04/2009 (01:20:53 PM)
    - major modification to particle array classes. 
	Constructor changed to take
      	a more elaborate specification of partile properties. 
	extend function added.
      	add_property function added.
      	the property_arrays attribute removed.
	
	Above changes needed for implementing aspects of the integrator class.


Thu Nov  5 09:49:06 IST 2009
    - tests for odestepper done, seems to be working fine.